--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,500;0,700;1,100;1,300;1,500;1,600&display=swap');
+* {
+  margin: 0;
+  padding: 0;
+}
 #root {
-  max-width: 1280px;
   margin: 0 auto;
   text-align: center;
   font-family: 'Poppins', sans-serif;
