--- a/src/Components/Directory.css
+++ b/src/Components/Directory.css
@@ -1,8 +1,7 @@
 ul {
   list-style: none;
-  margin: 0;
-  padding: 0;
 }
+
 .user__list__data {
   display: flex;
   align-items: center;
@@ -11,21 +10,22 @@ ul {
   padding: 10px;
   margin: 20px;
   border: 3px solid whitesmoke;
-  width: 70vw;
-  background: rgb(243, 232, 228);
+  /* width: 100%; */
+  background: #f7cac9;
+
   transition: background 10s;
 }
 a {
   color: #383535;
 }
-
+/* 
 .user__list__data :hover {
-  cursor: pointer; /* Change the cursor to a pointer */
+  cursor: pointer; /* Change the cursor to a pointer 
 }
 
 @media only screen and (max-width: 600px) {
   .user__list__data {
-    width: 80vw;
+    width: 100%;
     background: rgb(187, 232, 240);
   }
-}
+} */
