--- a/src/Components/Profile.css
+++ b/src/Components/Profile.css
@@ -1,12 +1,36 @@
 .profile__container {
   background: azure;
   width: 100%;
-  height: 100vh;
+  height: 100%;
 }
 
 .profile__container__header {
+  margin: 10px;
+  padding: 2px;
   display: flex;
   flex-direction: row;
   justify-content: space-around;
   align-items: center;
+}
+
+.back__button {
+  width: 70px;
+  height: 24px;
+  margin-left: 5px;
+  border: none;
+  cursor: pointer;
+}
+
+.user__detail__container {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  align-items: center;
+}
+
+.user__post__content {
+  margin-top: 4rem;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
 }
